# agentweb

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  MVP_PLAN.md  README.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup-env.sh  test_e2e_sdk.py
.stitch/: DESIGN.md
alembic/: env.py
alembic/versions/: 191cfeb966ca_add_tasks_and_task_attempts.py  2d3717473392_add_endpoint_url_to_agents.py  88e5ee7ff6b9_add_endpoint_protocol_to_agents.py  91173bff61e2_add_winning_attempt_id_to_tasks.py  93dbfd21e749_add_endpoint_api_key_to_agents.py  c33ddf4364a7_add_encrypted_key_to_api_keys.py  f3f063a558e2_initial_schema.py
app/: config.py  dependencies.py  main.py
app/api/v1/: a2a.py  agent_hub.py  agents.py  api_keys.py  auth.py  dashboard.py  invoke.py  openai_compat.py  router.py  tasks.py  upload.py  usage.py  users.py
app/core/: database.py  exceptions.py  redis.py  security.py
app/models/: __init__.py  agent.py  base.py  task.py  usage.py  user.py
app/schemas/: a2a.py  agent.py  common.py  invoke.py  openai_compat.py  task.py  usage.py  user.py
app/services/: agent_service.py  auth_service.py  llm_service.py  metering_service.py  routing_service.py  webhook_service.py
app/ws/: agent_channel.py  chat_gateway.py  connection_manager.py  gateway.py  protocol.py
docs/: frontend-design.md
docs/stitch_agentweb_marketplace_ui/: agentweb_ui_requirements_document_prd.md
docs/stitch_agentweb_marketplace_ui/account_settings/: code.html
docs/stitch_agentweb_marketplace_ui/agent_details/: code.html
docs/stitch_agentweb_marketplace_ui/agent_logic/: DESIGN.md
docs/stitch_agentweb_marketplace_ui/agent_marketplace_home/: code.html
examples/: mock_agent.py
sdk/: LICENSE  README.md  pyproject.toml
sdk/agentweb_sdk/: __init__.py  adapter.py  connection.py  exceptions.py  plugin.py
sdk/examples/: http_adapter_agent.py  openclaw_agent.py  simple_agent.py  stream_agent.py
web/: next.config.ts  package-lock.json  package.json
(+36 files in other folders)
