[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentweb-sdk"
version = "0.1.0"
description = "Python SDK for connecting agents to the AgentWeb platform"
requires-python = ">=3.9"
dependencies = [
    "websockets>=12.0",
    "httpx>=0.25.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
