[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentweb-sdk"
version = "0.1.0"
description = "Python SDK for connecting agents to the AgentWeb platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "zhangqian" },
]
keywords = ["agent", "ai", "sdk", "agentweb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "websockets>=12.0",
    "httpx>=0.25.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/zhangqian4300-bit/agentweb"
Repository = "https://github.com/zhangqian4300-bit/agentweb"
